Fixes photos section on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -92,8 +92,10 @@ body > section {
 * Company members
 */
 
-.work-item {
-	width: 20%;
+@media (min-width: 768px) {
+	.work-item {
+		width: 20%;
+	}
 }
 
 .work-item img {
@@ -134,7 +136,7 @@ body > section {
 	font-size: 18px;
 	font-weight: 700;
 	line-height: 24px;
-	margin-top: -25%;
+	margin-top: -60px;
 }
 
 .work-item .myOverlay p {
