--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -163,7 +163,7 @@ background-position: center top !important;
 /* works */
 
 .work-item {
-  /*left: 5% !important;*/
+  left: 5% !important;
   width: 90%;
 }
 
